--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
             <div class="card">
                 <h3>Curriculum Vitae</h3>
                 <p>View my professional experience, skills, and projects.</p>
-                <a href="#" class="download-btn">View CV</a>
+                <a href="cv.pdf" class="download-btn" target="_blank">View CV</a>
             </div>
 
             <div class="card">
                 <h3>Academic Transcript</h3>
                 <p>Official records of academic performance and grades.</p>
-                <a href="#" class="download-btn">View Transcript</a>
+                <a href="transcript.pdf" class="download-btn" target="_blank">View Transcript</a>
             </div>
         </div>
 
